ToPropertyKeyOrNumber incorrectly says it doesn't return a number in AI https://bugs.webkit.org/show_bug.cgi?id=273429 rdar://127225001

Reviewed by Yusuke Suzuki.

Right now ToPropertyKeyOrNumber falls through to ToPropertyKey, which says it always
returns `SpecString | SpecSymbol`. This is obviously wrong.

* JSTests/stress/ToPropertyKeyOrNumber-AI-should-include-number.js: Added.
(opt.f):
(opt):
* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:

Canonical link: https://commits.webkit.org/278136@main